# rust-playground

./: LICENSE  README.md
msgpackio/: Cargo.toml  readme.md  test.msgpack
msgpackio/src/: ext.rs  id.rs  iter.rs  lib.rs  main.rs  map.rs  reader.rs  value.rs  writer.rs
msgpackio/src/read/: iter.rs  map.rs  reader.rs  value.rs
msgpackio/src/write/: writer.rs
msgpackio/tests/: basic.rs
storage/: .gitignore  Cargo.toml  readme.md
storage/doc/: storage_filesystem.md
storage/src/: core.rs  extended.rs  interface.rs  lib.rs  storage_filesystem.rs  storage_memory.rs  util.rs
storage/src/core/: base.rs  error.rs  iohandle.rs  meta.rs  mod.rs  seek.rs
storage/tests/: test_storage_mem.rs
