
[package]
name = "storage"
version = "0.0.1"
authors = []


[lib]
name="storage"
path="src/lib.rs"

#handle features
[features]
default = ["cli", "storage_filesystem"]
cli = ["argparse", "linenoise-rust", "rustc-serialize"]
storage_filesystem = []


[[bin]]
name="fs_store_test"
path="bin/fs_store_test.rs"

[[bin]]
name="storage_console"
path="bin/storage_console.rs"

[dependencies]
rust-crypto = "*" #hash algorithm, crypto
bitflags = "*"

[dependencies.msgpackio] # for filesystem backend
path = "../msgpackio/"

#for lz4 compression optional
#[dependencies.lz4]
#version="*"

# rocksdb optional

# dependencies for command line interface:
[dependencies.argparse]
git="https://github.com/tailhook/rust-argparse"
optional = true

[dependencies.linenoise-rust]
version = "*"
optional = true

[dependencies.rustc-serialize]
version = "*"
optional = true


